[gd_scene load_steps=8 format=3 uid="uid://bxni2bxkl42s3"]

[ext_resource type="FontData" path="res://Fonts/MainFont.ttf" id="1"]
[ext_resource type="Texture2D" uid="uid://n5iyjwx6b06j" path="res://HUD/UnitsIcons/Soldier.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bgcr2w1ug7y0p" path="res://HUD/UnitMenu/MoveUnit.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cbdf4ysavucb6" path="res://HUD/UnitMenu/DestroyUnit.png" id="4"]
[ext_resource type="Script" path="res://HUD/UnitMenu/UnitMenu.gd" id="5"]

[sub_resource type="Font" id="1"]
data/0 = ExtResource( "1" )

[sub_resource type="Font" id="2"]
data/0 = ExtResource( "1" )

[node name="Units" type="Control"]
anchor_top = 0.6
anchor_right = 0.225
anchor_bottom = 1.0
script = ExtResource( "5" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color(0.337255, 0.52549, 0.509804, 1)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="MarginContainer" parent="VBox"]
custom_constants/margin_left = 5
script = null

[node name="Label" type="Label" parent="VBox/Header"]
custom_fonts/font = SubResource( "1" )
text = "unit menu - unit XYZ on field aa x bb"
structured_text_bidi_override_options = []
script = null

[node name="MarginContainer" type="MarginContainer" parent="VBox"]
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = null

[node name="ColorRect" type="ColorRect" parent="VBox/MarginContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.262745, 0.0117647, 0.294118, 0.203922)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBox/MarginContainer"]
custom_constants/margin_left = 5
script = null

[node name="VBox" type="VBoxContainer" parent="VBox/MarginContainer/MarginContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntName" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox"]
mouse_filter = 1
custom_fonts/font = SubResource( "2" )
text = "Szczypak"
align = 1
structured_text_bidi_override_options = []
script = null

[node name="AntIcon" type="TextureRect" parent="VBox/MarginContainer/MarginContainer/VBox"]
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( "2" )
expand = true
stretch_mode = 6
script = null

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/MarginContainer/MarginContainer/VBox"]
size_flags_horizontal = 3
script = null

[node name="Names" type="VBoxContainer" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer"]
size_flags_vertical = 3
script = null

[node name="Attack" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer/Names"]
mouse_filter = 1
custom_fonts/font = SubResource( "1" )
text = "Attack"
structured_text_bidi_override_options = []
script = null

[node name="Defense" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer/Names"]
mouse_filter = 1
custom_fonts/font = SubResource( "1" )
text = "Defense"
structured_text_bidi_override_options = []
script = null

[node name="Ants" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer/Names"]
mouse_filter = 1
custom_fonts/font = SubResource( "1" )
text = "Ants"
structured_text_bidi_override_options = []
script = null

[node name="Movement" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer/Names"]
mouse_filter = 1
custom_fonts/font = SubResource( "1" )
text = "Movements"
structured_text_bidi_override_options = []
script = null

[node name="Numbers" type="VBoxContainer" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = null

[node name="AttackValue" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer/Numbers"]
mouse_filter = 1
custom_fonts/font = SubResource( "1" )
text = "30 (16 + 14)"
structured_text_bidi_override_options = []
script = null

[node name="DefenseValue" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer/Numbers"]
mouse_filter = 1
custom_fonts/font = SubResource( "1" )
text = "24 (24 + 0)"
structured_text_bidi_override_options = []
script = null

[node name="AntsValue" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer/Numbers"]
mouse_filter = 1
custom_fonts/font = SubResource( "1" )
text = "80/100"
structured_text_bidi_override_options = []
script = null

[node name="MovementValue" type="Label" parent="VBox/MarginContainer/MarginContainer/VBox/HBoxContainer/Numbers"]
mouse_filter = 1
custom_fonts/font = SubResource( "1" )
text = "1/2"
structured_text_bidi_override_options = []
script = null

[node name="Control" type="Control" parent="VBox/MarginContainer"]
script = null

[node name="MoveUnit" type="TextureButton" parent="VBox/MarginContainer/Control"]
anchor_left = 0.97
anchor_top = 0.03
anchor_right = 0.97
anchor_bottom = 0.03
hint_tooltip = "Move Unit"
texture_normal = ExtResource( "3" )
expand = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DestroyUnit" type="TextureButton" parent="VBox/MarginContainer/Control"]
anchor_left = 0.97
anchor_top = 0.97
anchor_right = 0.97
anchor_bottom = 0.97
hint_tooltip = "TODO"
texture_normal = ExtResource( "4" )
expand = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}
